2007-08-29  Luca Bruno  <lethalman88@gmail.com>

	* configure.ac: support build under MSYS

2007-08-28  Luca Bruno  <lethalman88@gmail.com>

	* Added support for GNU building system

2007-08-27  Luca Bruno  <lethalman88@gmail.com>

	* syx/SConscript: compile static objects before shared

	* SConstruct: install files contained in the share directory, call update-desktop-database and update-mime-database

	* st/kernel/ContextPart.st (showTraceback): renamed to tracebackString, show the real methodClass

	* syx/syx-object.h (SYX_OBJECT_IS_SYMBOL): added

	* syx/syx-init.c (syx_initialize_system): set syx_system_initialized to TRUE

	* syx/syx-error.c (syx_signal): if system is not initialized, call syx_error ()
	All calls have been updated

	* Renamed numElements variable to tally as designed by Smalltalk-80

	* st/kernel/Behavior.st (setInstanceVariableNames): fixed to scan the given string of variable names

	* st/kernel/YXTools.st: renamed to MVC.st

2007-08-26  Luca Bruno  <lethalman88@gmail.com>

	* st/kernel/Behavior.st (setInstanceVariableNames): added
	
	* st/kernel/Metaclass.st: fixed metaclass creation

	* st/kernel/Behavior.st: fixed class creation
	
	* st/kernel/Dictionary.st (at:ifAbsent:): added

	* syx/syx-utils.c (syx_nanotime): added

	Fixed English for some comments, thanks to billijoex.
	
	* syx/syx-utils.c (syx_cold_parse_methods): restore the lexer if the syntax is not the expected for parsing method definitions

	Default compiler is now the C compiler, not the ST anymore. The ST compiler will be mantained
	for reference only.
	
	* syx/syx-lexer.c (syx_lexer_next_chunk): do not truncate the text by one char if it's at the end

	* syx/syx-parser.c (syx_parser_parse): be able to skip message pattern
	All calls have been updated

	* st/kernel/Compiler.st (runMultipleAndDeclarations): added

2007-08-24  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-error.h: got rid of varargs macros
