@@ -126,6 +126,7 @@ typedef enum
     SYX_VARS_BLOCK_CONTEXT_OUTER_CONTEXT = SYX_VARS_METHOD_CONTEXT_ALL,
     SYX_VARS_BLOCK_CONTEXT_HANDLED_EXCEPTION,
     SYX_VARS_BLOCK_CONTEXT_HANDLER_BLOCK,
+    SYX_VARS_BLOCK_CONTEXT_ENSURE_BLOCK,
     SYX_VARS_BLOCK_CONTEXT_ALL,
 
     SYX_VARS_PROCESSOR_SCHEDULER_BYTESLICE = SYX_VARS_OBJECT_ALL,
